[package]
name = "slink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
dirs = "4.0"
hmac = "0.12"
prettytable-rs = "0.10"
rusqlite = { version = "0.28", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
structopt = "0.3"
toml = "0.5"
uuid = { version = "1.0", features = ["v4"] }
