[package]
name = "slink"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
prettytable-rs = "0.10"
rusqlite = { version = "0.33", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
toml = "0.8"
uuid = { version = "1.12", features = ["v4"] }
nix = { version = "0.29", features = ["fs", "user"] }
users = "0.11.0"
blake3 = "1.5.5"
tempfile = "3.15.0"
